hphp/hack/test/typecheck/expression_trees/parse_constants.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

const int MY_CONST = 123;

function test(): void {
  $g = Code`1 + MY_CONST`;
}
